syntax = "proto3";

package rivet.backend.pkg.cluster.list;

import "proto/common.proto";
import "proto/backend/cluster.proto";

message Request {}

message Response {
	repeated rivet.common.Uuid cluster_ids = 1;
}
